# marisa-trie

./: .gitignore  CMakeLists.txt  marisa-config.cmake.in  marisa.pc.in
.github/workflows/: build.yml
tools/: CMakeLists.txt
